Added most webpage requirements

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -43,7 +43,7 @@
         <div class="author-container">
           <div class="author-image">
             
-            <img src="">
+            <img src="C:\Users\super\dev\LLM_Model_Bias\webpage\files\img\Isaac_Berlin_Headshot.png" alt="Isaac Berlin Headshot">
             
           </div>
           <p>
@@ -93,7 +93,7 @@
           </span>
           <span class="link-block">
             <a
-              href=""
+              href="https://github.com/isaac-berlin/LLM_Model_Bias"
               target="_blank"
               class="external-link button is-normal is-rounded is-dark is-outlined"
             >
@@ -163,22 +163,26 @@
 <b>What did you try to do? What problem did you try to solve? Articulate your objectives using absolutely no jargon.</b>
 </p>
 <p>
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+We aim to investigate the political bias of large language models (LLMs) by examining their ability to classify biased content.
+We source this content both from the BABE dataset and from manually labeled news articles relating to the 2024 Election in the United States.
+Our main goal is understanding how well these models can detect bias in text, and whether they perform differently for left-leaning versus right-leaning content.
 </p>
 
 <p>
 <b>How is it done today, and what are the limits of current practice?</b>
 </p>
 <p>
-Currently, the main way that LLMs distance themselves from political bias is by attempting to not answer questions that are politically charged. 
-However, this is not a perfect solution, as it can lead to the model not answering questions that are important to the user .
+It has laready been proven that LLMs can be biased, but previously conducted studies have mainly focused on either generating text or answering questions.
+These methods are good generalizations, but they do not provide enough information about the models' ability to detect bias in novel text.
 <p>
 
 <p>
 <b>Who cares? If you are successful, what difference will it make?</b>
 </p>
 <p>
-Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+If we are successful, we will be able to shed light on the political neutrality of a few SOTA LLMs. 
+This will assist in understanding the potential biases in these models when dealing with breaking news.
+Overall, it will help us categorize the bias of these models and potentially improve them in the future.
 </p>
 
 <hr>
@@ -190,7 +194,9 @@ Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu 
 </p>
 
 <p>
-Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+We used a finetuned a few SOTA LLMs to detect bias in text from the BABE dataset and from manually labeled news articles. 
+This allows us to have a baseline for how well these models can detect and classify bias. 
+It also allows us to see how these models will perform when the facts are not as clear as they are in the BABE dataset.
 </p>
 
 <p>
@@ -198,7 +204,7 @@ Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deseru
 </p>
 
 <p>
-Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+TODO
 </p>
 
 <hr>
@@ -208,7 +214,7 @@ Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium dolor
 <b>How did you measure success? What experiments were used? What were the results, both quantitative and qualitative? Did you succeed? Did you fail? Why?</b>
 </p>
 <p>
-Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+TODO
 </p>
 <table>
   <thead>
@@ -247,6 +253,9 @@ Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed 
 
 <h2 id="conclusion">Conclustion and Future Work</h2>
 <p>
+
+  TODO
+  <br>
 
   How easily are your results able to be reproduced by others?
   Did your dataset or annotation affect other people's choice of research or development projects to undertake?
