--- a/index.html
+++ b/index.html
@@ -206,27 +206,29 @@ TODO
 <table>
   <thead>
     <tr>
-      <th style="text-align: center"><strong>Experiment</strong></th>
-      <th style="text-align: center">1</th>
-      <th style="text-align: center">2</th>
-      <th style="text-align: center">3</th>
+      <th style="text-align: center"><strong>Model</strong></th>
+      <th style="text-align: center">Accuracy</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <td style="text-align: center"><strong>Sentence</strong></td>
-      <td style="text-align: center">Example 1</td>
-      <td style="text-align: center">Example 2</td>
-      <td style="text-align: center">Example 3</td>
+      <td style="text-align: center"><strong>DistilBERT</strong></td>
+      <td style="text-align: center">0.4839</td>
     </tr>
     <tr>
-      <td style="text-align: center"><strong>Errors</strong></td>
-      <td style="text-align: center">error A, error B, error C</td>
-      <td style="text-align: center">error C</td>
-      <td style="text-align: center">error B</td>
+      <td style="text-align: center"><strong>RoBERTa</strong></td>
+      <td style="text-align: center">0.554</td>
+    </tr>
+    <tr>
+      <td style="text-align: center"><strong>BERT</strong></td>
+      <td style="text-align: center">0.5177</td>
+    </tr>
+    <tr>
+      <td style="text-align: center"><strong>ALBERT</strong></td>
+      <td style="text-align: center">0.5640</td>
     </tr>
   </tbody>
-  <caption>Table 1. This is Table 1's caption</caption>
+  <caption>Table 1. Models and their errors on the BABE dataset</caption>
 </table>
 <br>
 <div style="text-align: center;">
