removed bold from models in table

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ It also allows us to see how these models will perform when the facts are not as
 </p>
 
 <p>
-TODO
+We 
 </p>
 
 <hr>
@@ -212,19 +212,19 @@ TODO
   </thead>
   <tbody>
     <tr>
-      <td style="text-align: center"><strong>DistilBERT</strong></td>
+      <td style="text-align: center">DistilBERT</td>
       <td style="text-align: center">0.4839</td>
     </tr>
     <tr>
-      <td style="text-align: center"><strong>RoBERTa</strong></td>
+      <td style="text-align: center">RoBERTa</td>
       <td style="text-align: center">0.554</td>
     </tr>
     <tr>
-      <td style="text-align: center"><strong>BERT</strong></td>
+      <td style="text-align: center">BERT</td>
       <td style="text-align: center">0.5177</td>
     </tr>
     <tr>
-      <td style="text-align: center"><strong>ALBERT</strong></td>
+      <td style="text-align: center">ALBERT</td>
       <td style="text-align: center">0.5640</td>
     </tr>
   </tbody>
