added warning note about possible incorrect information

--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
 
   <div class="wrapper">
     <hr>
-    
+
+    <b>NOTE: </b> <p>Because our project has changed recently the information in this website is partially from our previous project proposal</p>
     <h2 id="abstract">Abstract</h2>
 
 <p>This study investigates potential political bias
@@ -191,7 +192,8 @@ It also allows us to see how these models will perform when the facts are not as
 </p>
 
 <p>
-We 
+We were optimistic that the models would be able to detect bias in the BABE dataset, but were eventually met with subpar results. 
+Our first pass at training the models did not work as expected, and we have decided to move forward with a different approach.
 </p>
 
 <hr>
