--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
   <div class="wrapper">
     <hr>
 
-    <b>NOTE: </b> <p>Because our project has changed recently the information in this website is partially from our previous project proposal</p>
+    <b>NOTE: </b> <p>Because our project has changed recently the information in this website is partially from our previous project proposal. Please see the Future Work section for more information about our new project.</p>
     <h2 id="abstract">Abstract</h2>
 
 <p>This study investigates potential political bias
@@ -203,7 +203,7 @@ Our first pass at training the models did not work as expected, and we have deci
 <b>How did you measure success? What experiments were used? What were the results, both quantitative and qualitative? Did you succeed? Did you fail? Why?</b>
 </p>
 <p>
-TODO
+We measured success by comparing the models' predictions to the ground truth labels in the BABE dataset. We unfortunately did not succeed in detecting bias in the BABE dataset, but we are hopeful that our new approach will yield better results.
 </p>
 <table>
   <thead>
@@ -241,14 +241,10 @@ TODO
 <h2 id="conclusion">Conclustion and Future Work</h2>
 <p>
 
-  TODO
-  <br>
-
-  How easily are your results able to be reproduced by others?
-  Did your dataset or annotation affect other people's choice of research or development projects to undertake?
-  Does your work have potential harm or risk to our society? What kinds? If so, how can you address them?
-  What limitations does your model have? How can you extend your work for future research?</p>
-
+In the future we are transitioning to a new project. We recieved feedback that our current research is not novel enough and have decided to switch to a multi agent bias conversation project.
+We are going to train left leaning, right leaning, and neutral agents to have a conversation. These models will be prompted with persuasive techniques and will be evaluated on how well they can persuade the other agent.
+These models will be trained with biased text from the BABE dataset and from manually labeled news articles. We will then evaluate how well these models can persuade the other agents based on human metrics.
+We plan to pit the left leaning and right leaning agents against each other to see how well they can persuade each other. We will also evaluate how well the left and right leaning agents can persuade the neutral model.
 
 <hr>
 
