updated link for code and models

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           </span>
           <span class="link-block">
             <a
-              href="https://github.com/isaac-berlin/LLM_Model_Bias"
+              href="https://github.com/Jerome-Newhouse/CSCI-5541-Project"
               target="_blank"
               class="external-link button is-normal is-rounded is-dark is-outlined"
             >
@@ -102,7 +102,7 @@
           </span>      
           <span class="link-block">
             <a
-              href=""
+              href="https://drive.google.com/drive/folders/1gn_FJI9ADmZBb8h0fG1MkNUEO0zXYonf?usp=sharing"
               target="_blank"
               class="external-link button is-normal is-rounded is-dark is-outlined"
             >
