--- a/index.html
+++ b/index.html
@@ -131,23 +131,23 @@
 
 <h2 id="introduction">Introduction</h2>
 <p>
-  The rapid growth of large language models (LLMs) has revolutionized how people consume information  and conduct research (<a href="">Kasneci et al., 2023</a>; 
-  <a href="">Thirunavukarasu et al., 2023</a>; <a href="">Lin et al., 2024</a>). However, their capacity for critical argumentation
+  The rapid growth of large language models (LLMs) has revolutionized how people consume information  and conduct research (<a href="https://doi.org/10.1016/j.lindif.2023.102274">Kasneci et al., 2023</a>; 
+  <a href="https://doi.org/10.1038/s41591-023-02448-8">Thirunavukarasu et al., 2023</a>; <a href="https://doi.org/10.48550/arXiv.2403.14896">Lin et al., 2024</a>). However, their capacity for critical argumentation
   and reasoning, particularly in multi-turn adversarial interactions, remains underexplored. Real-world applications demand LLMs capable of generating
   factually accurate, logical, and persuasive arguments, yet existing evaluation methods often focus on isolated tasks like summarization or question answering, 
-  limiting insights into their performance in dynamic and contextually rich scenarios (<a href="">Jin et al., 2024</a>). 
+  limiting insights into their performance in dynamic and contextually rich scenarios (<a href="https://doi.org/10.48550/arXiv.2403.02901">Jin et al., 2024</a>). 
 </p>
 <p>
   While mainstream media outlets are often scrutinized for their political leanings—ranging from left to right that categorizes outlets 
-  by bias— LLMs have not yet been thoroughly evaluated for their impartiality (<a href="">Naveedet et al., 2023</a>).
+  by bias— LLMs have not yet been thoroughly evaluated for their impartiality (<a href="https://doi.org/10.48550/arXiv.2307.06435">Naveed et al., 2023</a>).
   Additionally, while previous research has explored multi-agent interactions in LLMs, such as
-  collaborative or adversarial dialogue (<a href="">Du et al., 2023</a>), the analysis of political bias within these
+  collaborative or adversarial dialogue (<a href="https://arxiv.org/abs/2305.14325">Du et al., 2023</a>), the analysis of political bias within these
   contexts has been insufficiently addressed. This gap, and hence our work, is critical given the societal 
   implications of deploying biased LLMs in areas requiring impartiality and nuanced understanding.
 </p>
 <p>
-  To address this, we fine-tuned two prominent models, LLAMA 3.2 (<a href="">Touvron et al., 2023</a>) and
-  PHI 1.5 (<a href="">Li et al., 2023</a>), to exhibit distinct political biases (left-leaning and right-leaning) and designed
+  To address this, we fine-tuned two prominent models, LLAMA 3.2 (<a href="https://doi.org/10.48550/arXiv.2302.13971">Touvron et al., 2023</a>) and
+  PHI 1.5 (<a href="https://doi.org/10.48550/arXiv.2309.05463">Li et al., 2023</a>), to exhibit distinct political biases (left-leaning and right-leaning) and designed
   a structured debate arena to analyze their performance. The debate arena allowed these fine-tuned
   models to engage in structured, turn-taking dialogues where their ability to adhere to their training
   biases was tested under dynamic prompts. Furthermore, to evaluate the performance of these politically biased models, 
@@ -173,7 +173,7 @@ TODO: add when paper is finished
 <p><b>Model Fine-tuning</b></p>
 <p>
   In this study, we developed a framework for analyzing the political bias in large language models (LLMs) through structured debates. 
-  Selected models were fine-tuned using the <a href="">BABE</a> dataset, which was chosen for its ability to provide politically biased text, 
+  Selected models were fine-tuned using the <a href="https://www.kaggle.com/datasets/timospinde/babe-media-bias-annotations-by-experts">BABE</a> dataset, which was chosen for its ability to provide politically biased text, 
   aligning with our goal of creating models that exhibit specific left-leaning and right-leaning political stances. 
   We divided this dataset into two subsets: one labeled as biased and right-leaning, and the other as biased and left-leaning. These subsets were then used to fine-tune our base models, LLAMA 3.2 and PHI 1.5, to create politically biased models. 
   The LLAMA 3.2 model, developed by Meta, is a text-only model with 1 billion parameters, whereas PHI 1.5 model, created by Microsoft, is a Transformer-based model with 1.3 billion parameters. 
