--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@ we also conducted intra-model debates, where the left-leaning and right-leaning 
 </table>
 
 
-<h2 id="conclusion">Conclustion and Future Work</h2>
+<h2 id="conclusion">Conclusion and Future Work</h2>
 <p>
   In this study, we successfully developed a framework for analyzing political bias in large language models (LLMs) through structured debates. By
   fine-tuning the LLAMA 3.2 and PHI 1.5 models using the BABE dataset, we were able to create politically biased models that engaged in debates,
