added final report pdf

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <!-- Github link -->
           <span class="link-block">
             <a
-              href=""
+              href="files/CSCI5541_F24_Project_Final_Report.pdf"
               target="_blank"
               class="external-link button is-normal is-rounded is-dark is-outlined"
             >
